objects/Evidence__c.object
<CustomObject>
    <description>Evidence tied to an arb case</description>
    <fields>
        <fullName>Complaint__c</fullName>
        <description>Parent complaint record</description>
        <label>Complaint</label>
        <referenceTo>Complaint__c</referenceTo>
        <relationshipLabel>Evidence</relationshipLabel>
        <relationshipName>Evidence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description provided for evidence record</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evidence_Id__c</fullName>
        <description>Unique external id generated by arbitration service</description>
        <externalId>true</externalId>
        <label>Evidence Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>S3URI__c</fullName>
        <description>Link to the file relating to a piece of evidence</description>
        <label>S3URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Description of the title relating to a piece of evidence</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Evidence</label>
    <nameField>
        <label>Evidence Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evidence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>